--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 <link rel="stylesheet" href="css/style.css">
 
 <style>
-h2 { color: darkgreen; }
+p {
+    font-family: 'Calibri', sans-serif;
+}
 </style>
 </head>
 <body>
@@ -23,8 +25,12 @@ h2 { color: darkgreen; }
 
 <section>
 <h2>Welcome</h2>
-<p>This website spreads awareness about organic farming and healthy agriculture.</p>
-<button>Learn More</button>
+<p>
+Organic farming is a sustainable agricultural system that uses natural methods
+to grow healthy crops and protect the environment.
+</p>
+
+<button>Explore More</button>
 </section>
 
 </body>
