--- a/about.html
+++ b/about.html
@@ -1,25 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>About Organic Farming</title>
-<link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-
-<header>
-<h1>What is Organic Farming?</h1>
-<nav>
-<a href="index.html">Home</a>
-<a href="about.html">About</a>
-<a href="benefits.html">Benefits</a>
-<a href="gallery.html">Gallery</a>
-<a href="contact.html">Contact</a>
-</nav>
-</header>
-
 <section>
-<p>Organic farming avoids chemical fertilizers and uses natural methods for cultivation.</p>
+<h2>What is Organic Farming?</h2>
+<p>
+Organic farming avoids synthetic chemicals and promotes eco-friendly practices.
+</p>
 </section>
-
-</body>
-</html>
