--- a/benefits.html
+++ b/benefits.html
@@ -1,44 +1,24 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>Benefits</title>
-<link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-
-<header>
-<h1>Benefits of Organic Farming</h1>
-<nav>
-<a href="index.html">Home</a>
-<a href="about.html">About</a>
-<a href="benefits.html">Benefits</a>
-<a href="gallery.html">Gallery</a>
-<a href="contact.html">Contact</a>
-</nav>
-</header>
-
 <section>
+<h2>Benefits</h2>
+
 <ul>
-<li>Improves soil fertility</li>
-<li>Healthy food production</li>
-<li>Eco-friendly</li>
+<li>Improves soil health</li>
+<li>Reduces pollution</li>
+<li>Produces healthy food</li>
 </ul>
 
 <table>
 <tr>
-<th>Type</th>
-<th>Method</th>
+<th>Farming Type</th>
+<th>Fertilizer Used</th>
 </tr>
 <tr>
 <td>Organic</td>
-<td>Natural fertilizers</td>
+<td>Natural</td>
 </tr>
 <tr>
 <td>Conventional</td>
-<td>Chemical fertilizers</td>
+<td>Chemical</td>
 </tr>
 </table>
 </section>
-
-</body>
-</html>
