--- a/gallery.html
+++ b/gallery.html
@@ -1,25 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>Gallery</title>
-<link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-
-<header>
-<h1>Farm Gallery</h1>
-<nav>
-<a href="index.html">Home</a>
-<a href="about.html">About</a>
-<a href="benefits.html">Benefits</a>
-<a href="gallery.html">Gallery</a>
-<a href="contact.html">Contact</a>
-</nav>
-</header>
-
 <section>
-<img src="images/farm.jpg" width="250">
+<h2>Gallery</h2>
+<img src="images/farm.jpg" width="300">
 </section>
-
-</body>
-</html>
