--- a/contact.html
+++ b/contact.html
@@ -1,33 +1,14 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>Contact</title>
-<link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-
-<header>
-<h1>Contact Us</h1>
-<nav>
-<a href="index.html">Home</a>
-<a href="about.html">About</a>
-<a href="benefits.html">Benefits</a>
-<a href="gallery.html">Gallery</a>
-<a href="contact.html">Contact</a>
-</nav>
-</header>
-
 <section>
+<h2>Contact Us</h2>
+
 <form>
-Name: <input type="text"><br><br>
+<p>Name:</p>
+<input type="text"><br><br>
 
-Interested in:
-<input type="radio" name="interest"> Organic Crops
-<input type="radio" name="interest"> Training<br><br>
+<p>Interested In:</p>
+<input type="radio" name="opt"> Organic Products
+<input type="radio" name="opt"> Training Programs<br><br>
 
-<button type="submit">Send</button>
+<button type="submit">Submit</button>
 </form>
 </section>
-
-</body>
-</html>
